--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+   "homepage": "https://khayb1.github.io/photography",
   "name": "react-portfolio",
   "private": true,
   "version": "0.0.0",
@@ -32,6 +33,6 @@
     "eslint-plugin-react-refresh": "^0.3.4",
     "gh-pages": "^6.2.0",
     "vite": "^4.3.9"
-  },
-  "homepage": "https://khayb1.github.io/photography"
+  }
+ 
 }
